# personal-growth-tracker

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: backend.md  designer.md  devops.md  frontend.md  pm.md  security.md  tester.md
.claude/scripts/: notify-slack.sh
.github/workflows/: ci.yml  deploy.yml
backend/: Makefile  README.md  docker-compose.yml  pyproject.toml  run_ecr_push.sh
backend/apis/goals/: Dockerfile  Makefile  README.md  __init__.py  api_handler.py  client.py  docker-compose.yml  generate_specification.py  main.py  models.py  pyproject.toml  run_docker_compose.sh  run_ecr_push.sh
backend/apis/goals/conf/: info.yaml
backend/apis/goals/terraform/: README.md  main.tf  outputs.tf  variables.tf
backend/apis/goals/terraform/modules/goals-api/: apigw.tf  lambda.tf  main.tf  outputs.tf  variables.tf
backend/apis/goals/tests/: __init__.py  api_handler_test.py  client_test.py  conftest.py  main_params_compat_test.py  models_test.py
backend/apis/habits/: __init__.py  api_handler.py  client.py  contribution.py  main.py  models.py  pyproject.toml  slack_notifier.py
backend/apis/habits/conf/: info.yaml
backend/apis/habits/terraform/: main.tf  outputs.tf  variables.tf
backend/apis/habits/terraform/modules/habits-api/: apigw.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  variables.tf
backend/apis/habits/tests/: __init__.py  api_handler_test.py  conftest.py  contribution_test.py  models_test.py
backend/apis/roadmaps/: Makefile  README.md  __init__.py  api_handler.py  client.py  docker-compose.yml  generate_specification.py  main.py  models.py  pyproject.toml  run_docker_compose.sh  run_ecr_push.sh
backend/apis/roadmaps/conf/: info.yaml
backend/apis/roadmaps/terraform/: README.md  main.tf  outputs.tf  variables.tf
backend/apis/roadmaps/terraform/modules/roadmaps-api/: apigw.tf  lambda.tf  main.tf  outputs.tf
backend/apis/roadmaps/tests/: __init__.py  api_handler_test.py  client_test.py  conftest.py  main_params_compat_test.py  models_test.py
backend/apis/skills/: Makefile  README.md  __init__.py  api_handler.py  client.py  docker-compose.yml  generate_specification.py  main.py  models.py  pyproject.toml  run_docker_compose.sh  run_ecr_push.sh
backend/apis/skills/conf/: info.yaml
backend/apis/skills/terraform/: README.md  main.tf  outputs.tf  variables.tf
backend/apis/skills/terraform/modules/skills-api/: apigw.tf  lambda.tf  main.tf  outputs.tf
backend/apis/skills/tests/: __init__.py  api_handler_test.py  client_test.py  conftest.py  main_params_compat_test.py  models_test.py
backend/app/: __init__.py  config.py  main.py
backend/app/services/: dynamodb.py
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/components/common/: index.ts
frontend/src/components/features/: index.ts
frontend/src/components/layout/: index.ts
frontend/src/contexts/: UserContext.tsx  index.ts
frontend/src/hooks/: index.ts  useApi.ts  useGoals.ts  useHabits.ts  useRoadmaps.ts  useSkills.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/pages/Dashboard/: Dashboard.module.css  Dashboard.tsx
frontend/src/pages/Goals/: GoalDetailPage.tsx  Goals.module.css  GoalsPage.tsx  (+1 more)
frontend/src/services/: api.ts  goalsService.ts  habitsService.ts  index.ts  roadmapsService.ts  skillsService.ts
frontend/src/styles/: variables.css
frontend/src/types/: api.ts  goal.ts  habit.ts  index.ts  roadmap.ts  skill.ts
frontend/src/utils/: formatDate.ts
infrastructure/: main.tf  variables.tf
infrastructure/environments/dev/: main.tf
infrastructure/environments/prod/: main.tf
infrastructure/modules/api-gateway/: main.tf
infrastructure/modules/cloudfront/: main.tf
infrastructure/modules/dynamodb/: main.tf
infrastructure/modules/github-oidc/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf
(+64 files in other folders)
