[tool.poetry]
name = "personal-growth-tracker-backend"
version = "0.1.0"
description = "Personal Growth Tracker API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
boto3 = "^1.35.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
moto = {extras = ["dynamodb"], version = "^5.0.0"}
ruff = "^0.9.0"
mypy = "^1.14.0"
boto3-stubs = {extras = ["dynamodb"], version = "^1.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apis"]

[tool.pytest.ini_options]
testpaths = ["apis/goals/tests", "apis/skills/tests", "apis/roadmaps/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["apis"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
