[tool.poetry]
name = "roadmaps-api"
version = "1.0.0"
description = "Roadmaps and milestones API for Personal Growth Tracker"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
boto3 = "^1.35.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
moto = {extras = ["dynamodb"], version = "^5.0.0"}
ruff = "^0.9.0"
mypy = "^1.14.0"
boto3-stubs = {extras = ["dynamodb"], version = "^1.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["."]
branch = true
